silence some warnings